--- a/css/style.css
+++ b/css/style.css
@@ -1,206 +1,332 @@
 body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    color: #0A143A;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: #0a143a;
 }
 
 .container {
-    max-width: 1146px;
-    margin: auto;
+  max-width: 1146px;
+  margin: auto;
 }
 
 .header {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    margin-bottom: 12px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 12px;
 }
 
 .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 24px;
 }
 
 .navbar-menu {
-    margin-right: auto;
+  margin-right: auto;
 }
 
 .menu {
-    list-style: none;
-    margin: 0;
-    padding-left: 22px;
-    padding-right: 22px;
-    display: flex;
+  list-style: none;
+  margin: 0;
+  padding-left: 22px;
+  padding-right: 22px;
+  display: flex;
 }
 
 .menu-item:not(:last-child) {
-    margin-right: 14px;
+  margin-right: 14px;
 }
 
 .menu-link {
-    text-decoration: none;
-    font-size: 14px;
-    color: #0A143A;
+  text-decoration: none;
+  font-size: 14px;
+  color: #0a143a;
 }
 
 .button {
-    text-decoration: none;
-    display: inline-block;
-    padding: 10px 15px;
-    cursor: pointer;
+  text-decoration: none;
+  display: inline-block;
+  padding: 10px 15px;
+  cursor: pointer;
 }
 
 .button-link {
-    color: inherit;
+  color: inherit;
 }
 
 .button-primary {
-    background-color: #256EEB;
-    border-radius: 5px;
-    color: white;
+  background-color: #256eeb;
+  border-radius: 5px;
+  color: white;
 }
 
 .search-panel {
-    height: 50px;
-    background: #256EEB;
-    border-radius: 5px;
-    display: flex;
-    padding: 3px;
+  height: 50px;
+  background: #256eeb;
+  border-radius: 5px;
+  display: flex;
+  padding: 3px;
 }
 
 .search-input {
-    flex-grow: 1;
-    background: #ffffff;
-    border-radius: 5px;
-    border: none;
-    padding-left: 22px;
-    padding-right: 22px;
+  flex-grow: 1;
+  background: #ffffff;
+  border-radius: 5px;
+  border: none;
+  padding-left: 22px;
+  padding-right: 22px;
 }
 
 .search-button {
-    background: #256EEB;
-    border: none;
-    color: white;
-    padding-left: 20px;
-    padding-right: 17px;
-    display: flex;
-    align-items: center;
+  background: #256eeb;
+  border: none;
+  color: white;
+  padding-left: 20px;
+  padding-right: 17px;
+  display: flex;
+  align-items: center;
 }
 
 .search-button-text {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 
 .paga-content {
-    display: grid;
-    grid-template-columns: 9fr 3fr;
-    grid-column-gap: 30px;
+  display: grid;
+  grid-template-columns: 9fr 3fr;
+  grid-column-gap: 30px;
 }
 
 .card-image {
-    border-radius: 10px;
-    width: 264px;
-    height: 178px;
-    object-fit: cover;
+  border-radius: 10px;
+  width: 264px;
+  height: 178px;
+  object-fit: cover;
 }
 
 .cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .card {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .card:not(:nth-child(3n)) {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .card-header {
-    display: flex;
-    /* justify-content: space-between; */
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .card-title {
-    font-size: 16px;
-    line-height: 19px;
-    color: #256EEB; 
-    margin-top: 12px;
-    margin-bottom: 5px;
+  font-size: 16px;
+  line-height: 19px;
+  color: #256eeb;
+  margin-top: 12px;
+  margin-bottom: 5px;
 }
 
 .like {
-    background-color:#fff ;
-    border: none;
-    cursor: pointer;
-    margin-left: 15px;
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+  margin-left: 15px;
 }
 
 .card-price {
-    font-size: 16px;
-    line-height: 19px;
-    margin-bottom: 10px;
-    display: block;
+  font-size: 16px;
+  line-height: 19px;
+  margin-bottom: 10px;
+  display: block;
 }
 
 .card-text {
-    font-size: 14px;
-    line-height: 16px;
-    color: #C4C4C4;
-    margin-bottom: 4px;
-    margin-top: 0;
+  font-size: 14px;
+  line-height: 16px;
+  color: #c4c4c4;
+  margin-bottom: 4px;
+  margin-top: 0;
 }
 
 .card-link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .sidebar .paget-title {
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 21px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 21px;
 }
 
 .service {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .service-title {
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 16px;
-    margin-top: 7px;
-    margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  margin-top: 7px;
+  margin-bottom: 5px;
 }
 
 .service-text {
-    font-size: 14px;
-    line-height: 16px;
-    max-width: 217px;
+  font-size: 14px;
+  line-height: 16px;
+  max-width: 217px;
 }
 
 .footer-text {
-    display: inline-block;
-    font-size: 14px;
-    color: #C4C4C4;
-    line-height: 16px;
-    margin-bottom: 5px;
+  display: inline-block;
+  font-size: 14px;
+  color: #c4c4c4;
+  line-height: 16px;
+  margin-bottom: 5px;
 }
 
 .footer-menu {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    margin-bottom: 16px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-bottom: 16px;
 }
 
 .footer-link {
+  color: inherit;
+  text-decoration: none;
+  display: inline-block;
+  margin-bottom: 5px;
+}
+
+.main-single {
+    display: flex;
+    align-items: flex-start;
+}
+
+.content {
+  max-width: 460px;
+  margin-right: 30px;
+}
+
+.swiper-container {
+  width: 100%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper-slide {
+  background-size: cover;
+  background-position: center;
+}
+
+.mySwiper2 {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.mySwiper {
+  height: 20%;
+  box-sizing: border-box;
+  padding: 10px 0;
+}
+
+.mySwiper .swiper-slide {
+  width: 25%;
+  height: 100%;
+  opacity: 0.4;
+  border-radius: 10px;
+}
+
+.mySwiper .swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 3px;
+}
+
+.content-text {
+    font-size: 14px;
+    line-height: 140%; 
     color: inherit;
-    text-decoration: none;
-    display: inline-block;
+}
+
+.author {
+    min-width: 264px;
+}
+
+.single-price {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    margin-top: 0;
+    margin-bottom: 25px;
+    display: block;
+}
+
+
+.page-title {
+    margin-top: 0;
+    margin-bottom: 25px;
+}
+.author-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 25px;
+    margin-bottom: 30px;
+}
+
+.author-avatar {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.author-name {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    display: block;
+    margin-bottom: 4px;
+}
+
+.rating {
     margin-bottom: 5px;
+}
+
+.rating-counter {
+    opacity: 0.5;
+    margin-left: 10px;
+}
+
+.author-status {
+    font-size: 12px;
+    line-height: 14px;
+}
+
+.button-block {
+    width: 100%;
+    display: block;
+    height: 54px;
+    margin-bottom: 5px;
+    border: none;
+}
+
+.button-succes {
+    background: #14B4BE;
+    border-radius: 5px;
+    color: #fff;
 }
