--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ body {
   margin-bottom: 24px;
 }
 
+.navbar-panel {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+}
+
 .navbar-menu {
   margin-right: auto;
 }
@@ -92,10 +98,10 @@ body {
   margin-left: 5px;
 }
 
-.paga-content {
+.page-content {
   display: grid;
   grid-template-columns: 9fr 3fr;
-  grid-column-gap: 30px;
+  grid-column-gap: 10px;
 }
 
 .card-image {
@@ -113,15 +119,15 @@ body {
 
 .card {
   margin-bottom: 20px;
+  margin-right: 20px;
 }
 
-.card:not(:nth-child(3n)) {
-  margin-right: 15px;
-}
+
 
 .card-header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .card-title {
@@ -329,4 +335,111 @@ body {
     background: #14B4BE;
     border-radius: 5px;
     color: #fff;
+}
+
+.menu-button {
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+  display: none;
+}
+
+.close-menu {
+  display: none;
+}
+
+@media (max-width: 1200px) {
+    .container {
+      max-width: 960px;
+    }
+    .card {
+      width: 45%;
+    }
+    .card-image {
+      width: 100%;
+      height: 200px;
+    }
+}
+@media (max-width: 992px) {
+  .container {
+    max-width: 740px;
+  }
+  .card-image {
+    height: 150px;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    max-width: 560px;
+  }
+  .card {
+    width: 100%;
+  }
+  .page-content {
+    grid-template-columns: 8fr 4fr;
+  }
+  .menu-button {
+    display: block;
+  }
+  .close-menu {
+    display: block;
+    position: absolute;
+    right: 100px;
+    top: 30px;
+    cursor: pointer;
+    background-color: #fff;
+    border: none;
+
+  }
+  .navbar-panel {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 9;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.2s, opacity 0.2s;
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  .is-open {
+    transform: translate(0%);
+    opacity: 1;
+  }
+  .navbar-menu {
+    margin-left: auto;
+    margin-bottom: 20px;
+  }
+  .menu {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .menu-item:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+  .button-group {
+    display: flex;
+    flex-direction: column;
+
+  } 
+}
+@media (max-width: 576px) {
+  .container {
+    width: 90%;
+  }
+  .page-content {
+    grid-template-columns: 12fr;
+  }
+  .card-image {
+    height: 250px;
+  }  
+  .search-button-text {
+    display: none;
+  }
 }
