--- a/css/style.css
+++ b/css/style.css
@@ -359,10 +359,18 @@ body {
       width: 100%;
       height: 200px;
     }
+    .content {
+      max-width: 460px;
+      margin-right: 15px;
+    }
+    .author {
+      min-width: 200px;
+    }
 }
 @media (max-width: 992px) {
   .container {
     max-width: 740px;
+    display: block;
   }
   .card-image {
     height: 150px;
@@ -374,6 +382,9 @@ body {
   }
   .card {
     width: 100%;
+  }
+  .content {
+    min-width: 200px;
   }
   .page-content {
     grid-template-columns: 8fr 4fr;
@@ -432,6 +443,9 @@ body {
 @media (max-width: 576px) {
   .container {
     width: 90%;
+  }
+  .main-single {
+    display: block;
   }
   .page-content {
     grid-template-columns: 12fr;
